# telecom-churn-mlops

./: .env.example  .gitignore  Dockerfile  Dockerfile.jupyter  LICENSE  README.md  docker-compose.yml  dvc.yaml  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: ci-cd.yml  dvc-sync.yml  mlops-pipeline.yml
api/: __init__.py  main.py
data/raw/: telecom_data.csv.dvc
docs/: architecture.md
frontend/: dashboard.html
huggingface_integration/: __init__.py  download_model.py  spaces_app.py  upload_model.py
models/: metrics.json  model_info.json
notebooks/: 01_exploratory_analysis.ipynb
scripts/: evaluate.py  generate_sample_data.py  inspect_data.py  load_data.py  preprocess.py  split_data.py  train_models.py
src/: __init__.py  config.py  data_loader.py  feature_engineering.py  mlflow_utils.py  models.py
tests/: __init__.py  test_api.py  test_data_loader.py  test_feature_engineering.py
